// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Demos > should auto dodge Interval chart even if color equals x 1`] = `
"                   120                          
120 +              ===              110      # A
    | 100          ===              ***      = B
 96 + ### 80       === 90       90  *** 85   * C
    | ### ###      === === 70   *** *** ***     
 72 + ### ### 60   === === ===  *** *** ***     
    | ### ### ###  === === ===  *** *** ***     
 48 + ### ### ###  === === ===  *** *** ***     
    | ### ### ###  === === ===  *** *** ***     
 24 + ### ### ###  === === ===  *** *** ***     
    | ### ### ###  === === ===  *** *** ***     
  0 +------+------------+------------+------    
           A            B            C          "
`;

exports[`Demos > should auto dodge Interval chart even if color equals x with custom colors 1`] = `
"                   120                          
120 +              ===              110      # A
    | 100          ===              ***      = B
 96 + ### 80       === 90       90  *** 85   * C
    | ### ###      === === 70   *** *** ***     
 72 + ### ### 60   === === ===  *** *** ***     
    | ### ### ###  === === ===  *** *** ***     
 48 + ### ### ###  === === ===  *** *** ***     
    | ### ### ###  === === ===  *** *** ***     
 24 + ### ### ###  === === ===  *** *** ***     
    | ### ### ###  === === ===  *** *** ***     
  0 +------+------------+------------+------    
           A            B            C          "
`;

exports[`Demos > should render Categorical Point chart correctly 1`] = `
"                           
 100 +                     
     |                 [94m·[0m   
  80 +      [94m·[0m       [94m····[0m   
     |   [94m·[0m        [94m···[0m      
  60 +       [94m·[0m  [94m··[0m         
     |    [94m···[0m [94m··[0m           
  40 +   [94m··[0m  [94m·[0m       [94m·[0m     
     | [94m··[0m          [94m·[0m       
  20 +         [94m·[0m           
     |                     
   0 +---+---+---+---+---+ 
     0  20  40  60  80  100"
`;

exports[`Demos > should render DodgeX Interval chart correctly 1`] = `
"                   120                          
120 +              ###              110      # X
    | 100          ###              ===      = Y
 96 + ### 80       ### 90       90  === 85   * Z
    | ### ===      ### === 70   ### === ***     
 72 + ### === 60   ### === ***  ### === ***     
    | ### === ***  ### === ***  ### === ***     
 48 + ### === ***  ### === ***  ### === ***     
    | ### === ***  ### === ***  ### === ***     
 24 + ### === ***  ### === ***  ### === ***     
    | ### === ***  ### === ***  ### === ***     
  0 +------+------------+------------+------    
           A            B            C          "
`;

exports[`Demos > should render DodgeX Interval chart with linear color correctly 1`] = `
"                   120                       
120 +              ###              110      
    | 100          ###              ***      
 96 + +++ 80       ### 90       90  *** 85   
    | +++ ---      ### === 70   === *** ===  
 72 + +++ --- 60   ### === :::  === *** ===  
    | +++ --- ···  ### === :::  === *** ===  
 48 + +++ --- ···  ### === :::  === *** ===  
    | +++ --- ···  ### === :::  === *** ===  
 24 + +++ --- ···  ### === :::  === *** ===  
    | +++ --- ···  ### === :::  === *** ===  
  0 +------+------------+------------+------ 
           A            B            C       "
`;

exports[`Demos > should render Interval chart correctly 1`] = `
"                           
200 +                      
    |                 170  
160 +         150     [94m███[0m  
    |     120 [94m███[0m 130 [94m███[0m  
120 + 100 [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
    | [94m███[0m [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
 80 + [94m███[0m [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
    | [94m███[0m [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
 40 + [94m███[0m [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
    | [94m███[0m [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
  0 +--+-------+-------+-- 
      Jan     Mar     May  "
`;

exports[`Demos > should render Interval chart with numeric x-axis correctly 1`] = `
" Poisson Distribution (λ=3) 
                            
0.25 +        0.22          
     |         [94m███[0m [94m███[0m      
0.20 +         [94m███[0m [94m███[0m0.17  
     |    0.15 [94m███[0m [94m███[0m [94m███[0m  
0.15 +     [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
     |     [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
0.10 +     [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
     |0.05 [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
0.05 + [94m███[0m [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
     | [94m███[0m [94m███[0m [94m███[0m [94m███[0m [94m███[0m  
   0 +--+---+---+---+---+-- 
        0   1   2   3   4   "
`;

exports[`Demos > should render Interval chart with single-series color encode correctly 1`] = `
"                                
200 +                      # Jan
    |                 170  = Feb
160 +         150     +++  * Mar
    |     120 *** 130 +++  x Apr
120 + 100 === *** xxx +++  + May
    | ### === *** xxx +++       
 80 + ### === *** xxx +++       
    | ### === *** xxx +++       
 40 + ### === *** xxx +++       
    | ### === *** xxx +++       
  0 +--+-------+-------+--      
      Jan     Mar     May       "
`;

exports[`Demos > should render Line chart correctly 1`] = `
"                   
40 +      35       
   |       [94m·[0m       
32 +      [94m·[0m [94m·[0m  28  
   |     [94m·[0m   [94m·[0m  [94m·[0m  
24 +    [94m·[0m     [94m··[0m   
   |   [94m·[0m     24    
16 + [94m··[0m            
   |15             
 8 +               
   |               
 0 +-+----+-----+- 
    Jan  Jun   Dec "
`;

exports[`Demos > should render Line chart in ascii mode correctly 1`] = `
"                   
40 +      35       
   |       *       
32 +      * *  28  
   |     *   *  *  
24 +    *     **   
   |   *     24    
16 + **            
   |15             
 8 +               
   |               
 0 +-+----+-----+- 
    Jan  Jun   Dec "
`;

exports[`Demos > should render Line chart with numeric x-axis correctly 1`] = `
"Poisson Distribution (λ=3)
                          
0.25 +                    
     |   [94m··[0m               
0.20 +                    
     |     [94m·[0m              
0.15 +  [94m·[0m                 
     |                    
0.10 +                    
     |                    
0.05 + [94m·[0m                  
     |                    
   0 +-+---+-             
       0   4              "
`;

exports[`Demos > should render Multi-series Line chart correctly 1`] = `
"                               
200 +               # Product A
    |      ###      = Product B
160 +     #   #  #             
    |   #      #               
120 +  # #      #              
    | #                        
 80 +      ====                
    |  ====    ===             
 40 + =                        
    |                          
  0 +-+----+-----+-            
     Jan  Jun   Dec            "
`;

exports[`Demos > should render Multi-series Line chart with title correctly 1`] = `
"        Monthly Revenue        
                               
200 +               # Product A
    |      ###      = Product B
160 +     #   #  #             
    |   #      #               
120 +  # #      #              
    | #                        
 80 +      ====                
    |  ====    ===             
 40 + =                        
    |                          
  0 +-+----+-----+-            
     Jan  Jun   Dec            "
`;

exports[`Demos > should render Point chart correctly 1`] = `
"                           
 100 +                     
     |               [94m···[0m   
  80 +  [94m·[0m          [94m···[0m     
     |     [94m·[0m     [94m···[0m       
  60 +         [94m···[0m         
     |       [94m····[0m          
  40 +      [94m··[0m             
     |    [94m··[0m               
  20 +  [94m··[0m     [94m·[0m           
     | [94m·[0m              [94m·[0m    
   0 +---+---+---+---+---+ 
     0  20  40  60  80  100"
`;

exports[`Demos > should render Point chart with linear color correctly 1`] = `
"                           
 100 +                     
     |               ###   
  80 +  *          ***     
     |     *     ++*       
  60 +         =+=         
     |       ====          
  40 +      --             
     |    ::               
  20 +  ·:     :           
     | ·              ·    
   0 +---+---+---+---+---+ 
     0  20  40  60  80  100"
`;

exports[`Demos > should render Point chart with linear color in ascii mode correctly 1`] = `
"                           
 100 +                     
     |               ###   
  80 +  *          ***     
     |     *     ++*       
  60 +         =+=         
     |       ====          
  40 +      --             
     |    ::               
  20 +  ·:     :           
     | ·              ·    
   0 +---+---+---+---+---+ 
     0  20  40  60  80  100"
`;

exports[`Demos > should render StackY Interval chart correctly 1`] = `
"                              
200 +         180          # A
    |         ===          = B
160 + 140     ===             
    | ===     ===             
120 + === 110 ### 100         
    | ### === ### ===         
 80 + ### ### ### === 70      
    | ### ### ### ### ===     
 40 + ### ### ### ### ###     
    | ### ### ### ### ###     
  0 +--+-------+-------+--    
      Jan     Mar     May     "
`;

exports[`Demos > should render Transposed Interval chart correctly 1`] = `
"                           
    |                      
Jan +[94m█████████████████[0m 170 
    |                      
Feb +[94m█████████████[0m 130     
    |                      
Mar +[94m███████████████[0m 150   
    |                      
Apr +[94m████████████[0m 120      
    |                      
May +[94m██████████[0m 100        
    |+---+---+---+---+---+ 
     0  40  80  120 160 200"
`;

exports[`Demos > should render Transposed StackY Interval chart correctly 1`] = `
"                              
    |                      # A
Jan +#####== 70            = B
    |                         
Feb +#######=== 100           
    |                         
Mar +############====== 180   
    |                         
Apr +########=== 110          
    |                         
May +##########==== 140       
    |+---+---+---+---+---+    
     0  40  80  120 160 200   "
`;
